Transition to book

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>HOME PAGE</h1>
+
 <a href="users/sign_in">サインイン</a>
 <a href="users/sign_up">ユーザー登録</a>
+<h1>HOME PAGE</h1>
+<%=  link_to  "本一覧をみる" ,  books_path %>
