--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
-
-<a href="users/sign_in">サインイン</a>
-<a href="users/sign_up">ユーザー登録</a>
+<%=  link_to  "サインイン" ,  new_user_session_path %>
+<%=  link_to  "ユーザー登録" ,  new_user_registration_path %>
 <h1>HOME PAGE</h1>
 <%=  link_to  "本一覧をみる" ,  books_path %>
+
+
