--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,11 @@
 <html>
   <head>
     <title>Thefirstrails</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
+    <% if user_signed_in? %>
+       <p> Hello, <%=  current_user . email  %> </p>
+       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+     <% end %>
+    <hr>
     <%= yield %>
   </body>
 </html>
