Add name and age to user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,10 @@
 <h1> Profile </h1>
 
 <h3> Email address </h3>
-
 <%= @user.email %> 
+
+<h3> Name </h3>
+<%= @user.name %>
+
+<h3> Age </h3>
+<%= @user.age %>
