--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,12 @@
 <h3> Email address </h3>
 <%= @user.email %> 
 
+<p>
+  <% if @user.avatar.attached? %>
+    <%= image_tag @user.avatar %>
+  <% end %>
+</p>
+
 <h3> Name </h3>
 <%= @user.name %>
 
