--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.number_field :number_of_pages %>
   </div>
   
+   <div class="field">
+    <%= form.label :detail %>
+    <%= form.text_field :detail %>
+  </div>
+  
   <div class="field">
      <%= form.label :image %>
      <%= form.file_field :image %><br>
