--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,6 +20,18 @@
      <%= image_tag @book.image %>
    <% end %>
  </p>
+ 
+ <h2>Review From</h2>
+ <%= form_with(model: @book_review, local: true) do |form| %>
+   <div class= "field">
+     <%= form.text_area :review %>
+     <%= form.hidden_field :book_id, :value => @book.id %>
+     <%= form.hidden_field :user_id, :value => current_user.id %>
+   </div>
+   <div class="actions">
+     <%= form.submit %>
+   </div>
+<% end %>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
